Simple UI added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <script src="./scripts/script.js"></script>
+  <script src="./scripts/script.js" defer></script>
 </head>
 <body>
-  
+  <button class="button1">ROCK</button>
+  <button class="button2">PAPER</button>
+  <button class="button3">SCISSORS</button>
+  <div class="score"> <p class="playerScore">Player Score: 0 </p> <p class="computerScore">Computer Score: 0 </p>
+  </div>
+  <div class="displayResults"></div>
 </body>
 </html>
